--- a/contact.html
+++ b/contact.html
@@ -58,6 +58,7 @@
 						<ul>
 							<li><a href="index.html">Home</a></li>
 							<li><a href="portfolio.html">Portfolio</a></li>
+							<li><a href="about.html">About</a></li>
 							<li class="has-dropdown">
 								<a href="blog.html">Blog</a>
 								<ul class="dropdown">
@@ -67,8 +68,6 @@
 									<li><a href="#">API</a></li>
 								</ul>
 							</li>
-							<li><a href="about.html">About</a></li>
-							<li><a href="about.html">About</a></li>
 							<li class="active"><a href="index.html#fh5co-started">Contact</a></li>
 						</ul>
 					</div>
@@ -149,7 +148,7 @@
 					</p>
 					<p>
 						<ul class="fh5co-social-icons">
-							<li><a href="https://www.linkedin.com/in/mariajosegonzalezantelo"><i class="icon-github"></i></a></li>
+							<li><a href="https://github.com/sechix"><i class="icon-github"></i></a></li>
 							<li><a href="https://www.linkedin.com/in/mariajosegonzalezantelo"><i class="icon-linkedin"></i></a></li>
 						</ul>
 					</p>
