--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 						<ul>
 							<li class="active"><a href="index.html">Home</a></li>
 							<li><a href="portfolio.html">Portfolio</a></li>
+							<li><a href="about.html">About</a></li>
 							<li class="has-dropdown">
 								<a href="blog.html">Blog</a>
 								<ul class="dropdown">
@@ -68,7 +69,6 @@
 									<li><a href="#">API</a></li>
 								</ul>
 							</li>
-							<li><a href="about.html">About</a></li>
 							<li><a href="index.html#fh5co-started">Contact</a></li>
 						</ul>
 					</div>
@@ -104,7 +104,7 @@
 								<i class="icon-hotairballoon"></i>
 							</span>
 							<div class="feature-copy">
-								<h3>Technical expertise</h3>
+								<h3>Technical Expertise</h3>
 								<p>More than 8 years of experience in development with open source and cutting-edge technologies including infrastructures. Please check my contributions <a  href="https://github.com/sechix">here <i class="icon-github"></i></a>.</p>
 							</div>
 						</div>
@@ -353,7 +353,7 @@
 					</p>
 					<p>
 						<ul class="fh5co-social-icons">
-							<li><a href="https://www.linkedin.com/in/mariajosegonzalezantelo"><i class="icon-github"></i></a></li>
+							<li><a href="https://github.com/sechix"><i class="icon-github"></i></a></li>
 							<li><a href="https://www.linkedin.com/in/mariajosegonzalezantelo"><i class="icon-linkedin"></i></a></li>
 						</ul>
 					</p>
