--- a/blog.html
+++ b/blog.html
@@ -53,12 +53,13 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-xs-2">
-						<div id="fh5co-logo"><a href="index.html">Maria Jose Gonzalez<span>.</span></a></div>
+						<div id="fh5co-logo"><a href="index.html">MJG<span>.</span></a></div>
 					</div>
 					<div class="col-xs-10 text-right menu-1">
 						<ul>
 							<li><a href="index.html">Home</a></li>
 							<li><a href="portfolio.html">Portfolio</a></li>
+							<li><a href="about.html">About</a></li>
 							<li class="has-dropdown active">
 								<a href="blog.html">Blog</a>
 								<ul class="dropdown">
@@ -68,7 +69,6 @@
 									<li><a href="#">API</a></li>
 								</ul>
 							</li>
-							<li><a href="about.html">About</a></li>
 							<li><a href="index.html#fh5co-started">Contact</a></li>
 						</ul>
 					</div>
@@ -78,7 +78,7 @@
 		</div>
 	</nav>
 
-	<div id="fh5co-blog">
+	<div id="fh5co-blog" class="no-padding-top">
 		<div class="container">
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
