--- a/portfolio.html
+++ b/portfolio.html
@@ -59,6 +59,7 @@
 						<ul>
 							<li><a href="index.html">Home</a></li>
 							<li class="active"><a href="portfolio.html">Portfolio</a></li>
+							<li><a href="about.html">About</a></li>
 							<li class="has-dropdown">
 								<a href="blog.html">Blog</a>
 								<ul class="dropdown">
@@ -68,7 +69,6 @@
 									<li><a href="#">API</a></li>
 								</ul>
 							</li>
-							<li><a href="about.html">About</a></li>
 							<li><a href="index.html#fh5co-started">Contact</a></li>
 						</ul>
 					</div>
@@ -78,12 +78,12 @@
 		</div>
 	</nav>
 
-	<div id="fh5co-portfolio">
+	<div id="fh5co-portfolio" class="no-padding-top">
 		<div class="container">
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>Portfolio</h2>
-					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia.</p>
+					<h2>My Work</h2>
+					<p>Building a great product is a creative, chaotic process which you won’t get right every time, so you have to also be learning from success and failure.	</p>
 				</div>
 			</div>
 			<div class="row">
