--- a/about.html
+++ b/about.html
@@ -188,7 +188,7 @@
 		</div>
 	</div>
 
-	<div id="fh5co-content-section">
+	<div>
 		<div class="container">
 			<div class="row row-bottom-padded-md">
 				<div class="col-md-8 col-md-offset-2 text-center heading-section animate-box fadeInUp animated-fast">
