--- a/portfolio.html
+++ b/portfolio.html
@@ -87,21 +87,37 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-md-4">
-					<div class="fh5co-portfolio animate-box">
-						<a href="#">
-							<div class="portfolio-entry" style="background-image: url(images/portfolio-1.jpg);"></div>
-							<div class="portfolio-text">
-								<h3>Photoshoot On The Street</h3>
-								<ul class="stuff">
-									<li><i class="icon-heart2"></i>200</li>
-									<li><i class="icon-eye2"></i>248</li>
-									<li><i class="icon-download3"></i>240</li>
-								</ul>
-							</div> 
-						</a>
+				<div class="carousel">
+					<div class="carousel-inner">
+						<div class="item">
+							<img src="/images/pislow/1.png">
+						</div>
+						<div class="item">
+							<img src="/images/pislow/2.png">
+						</div>
 					</div>
 				</div>
+				<div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+					<div class="carousel-inner">
+					  <div class="carousel-item active">
+						<img src="/images/pislow/1.png." class="d-block w-100" alt="...">
+					  </div>
+					  <div class="carousel-item">
+						<img src="/images/pislow/2.png" class="d-block w-100" alt="...">
+					  </div>
+					  <div class="carousel-item">
+						<img src="..." class="d-block w-100" alt="...">
+					  </div>
+					</div>
+					<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+					  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+					  <span class="visually-hidden">Previous</span>
+					</button>
+					<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+					  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+					  <span class="visually-hidden">Next</span>
+					</button>
+				  </div>
 				<div class="col-md-4">
 					<div class="fh5co-portfolio animate-box">
 						<a href="#">
