--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<!-- Flexslider  -->
 	<link rel="stylesheet" href="css/flexslider.css">
-
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 	<!-- Theme style  -->
 	<link rel="stylesheet" href="css/style.css">
 
@@ -51,7 +51,7 @@
 	<nav class="fh5co-nav" role="navigation">
 		<div class="top-menu">
 			<div class="container">
-				<div class="row">
+				<div class="">
 					<div class="col-xs-2">
 						<div id="fh5co-logo"><a href="index.html">MJG<span>.</span></a></div>
 					</div>
@@ -82,7 +82,7 @@
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row">
-				<div class="col-md-8 col-md-offset-2 text-center">
+				<div class=" col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2 text-center">
 					<div class="display-t js-fullheight">
 						<div class="display-tc js-fullheight animate-box" data-animate-effect="fadeIn">
 							<h1>Business & product leader, curious learner, and innovation fanatic.</h1>
@@ -182,7 +182,7 @@
 	<div id="fh5co-wireframe">
 		<div class="container">
 			<div class="row animate-box">
-				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
+				<div class=" col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2 text-center fh5co-heading">
 					<h2>Wireframe Connects the Underlying Conceptual Structure</h2>
 				</div>
 			</div>
@@ -275,7 +275,7 @@
 	<div id="fh5co-blog">
 		<div class="container">
 			<div class="row animate-box">
-				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
+				<div class=" col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2 text-center fh5co-heading">
 					<h2>Recent Post</h2>
 					<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
 				</div>
@@ -334,7 +334,7 @@
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row">
-				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
+				<div class=" col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2 text-center fh5co-heading">
 					<h2>Let's Connect!</h2>
 					<p>Please don't hesitate to reach out if you would like to chat about work or side project opportunities, share your feedback and input, or just connect.</p>
 					<p><a href="mailto:sechix@gmail.com" class="btn btn-default btn-lg">Contact Me</a></p>
@@ -380,7 +380,7 @@
 	<script src="js/jquery.flexslider-min.js"></script>
 	<!-- Main -->
 	<script src="js/main.js"></script>
-
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 	</body>
 </html>
 
