--- a/portfolio.html
+++ b/portfolio.html
@@ -31,7 +31,7 @@
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<!-- Flexslider  -->
 	<link rel="stylesheet" href="css/flexslider.css">
-
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 	<!-- Theme style  -->
 	<link rel="stylesheet" href="css/style.css">
 
@@ -51,7 +51,7 @@
 	<nav class="fh5co-nav" role="navigation">
 		<div class="top-menu">
 			<div class="container">
-				<div class="row">
+				<div class="">
 					<div class="col-xs-2">
 						<div id="fh5co-logo"><a href="index.html">Mjg<span>.</span></a></div>
 					</div>
@@ -81,32 +81,43 @@
 	<div id="fh5co-portfolio" class="no-padding-top">
 		<div class="container">
 			<div class="row animate-box">
-				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
+				<div class=" col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2 col-sm-8 col-sm-offset-2 text-center fh5co-heading">
 					<h2>My Work</h2>
-					<p>Building a great product is a creative, chaotic process which you won’t get right every time, so you have to also be learning from success and failure.	</p>
+					<p>"Building a great product is a creative, chaotic process which you won’t get right every time, so you have to also be learning from success and failure."	</p>
 				</div>
 			</div>
 			<div class="row">
-				<div class="carousel">
-					<div class="carousel-inner">
-						<div class="item">
-							<img src="/images/pislow/1.png">
-						</div>
-						<div class="item">
-							<img src="/images/pislow/2.png">
-						</div>
-					</div>
-				</div>
 				<div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
 					<div class="carousel-inner">
 					  <div class="carousel-item active">
-						<img src="/images/pislow/1.png." class="d-block w-100" alt="...">
+						<img src="images/pislow/1.png" class="d-block w-100" alt="...">
 					  </div>
 					  <div class="carousel-item">
-						<img src="/images/pislow/2.png" class="d-block w-100" alt="...">
+						<img src="images/pislow/2.png"class="d-block w-100" alt="...">
 					  </div>
 					  <div class="carousel-item">
-						<img src="..." class="d-block w-100" alt="...">
+						<img src="images/pislow/3.png"class="d-block w-100" alt="...">
+					  </div>
+					  <div class="carousel-item">
+						<img src="images/pislow/4.png"class="d-block w-100" alt="...">
+					  </div>
+					  <div class="carousel-item">
+						<img src="images/pislow/5.png" class="d-block w-100" alt="...">
+					  </div>
+					  <div class="carousel-item">
+						<img src="images/pislow/6.png"class="d-block w-100" alt="...">
+					  </div>
+					  <div class="carousel-item">
+						<img src="images/pislow/7.png"class="d-block w-100" alt="...">
+					  </div>
+					  <div class="carousel-item">
+						<img src="images/pislow/8.png" class="d-block w-100" alt="...">
+					  </div>
+					  <div class="carousel-item">
+						<img src="images/pislow/9.png"class="d-block w-100" alt="...">
+					  </div>
+					  <div class="carousel-item">
+						<img src="images/pislow/10.png"class="d-block w-100" alt="...">
 					  </div>
 					</div>
 					<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -118,90 +129,60 @@
 					  <span class="visually-hidden">Next</span>
 					</button>
 				  </div>
-				<div class="col-md-4">
-					<div class="fh5co-portfolio animate-box">
-						<a href="#">
-							<div class="portfolio-entry" style="background-image: url(images/portfolio-2.jpg);"></div>
-							<div class="portfolio-text">
-								<h3>Photoshoot On The Street</h3>
-								<ul class="stuff">
-									<li><i class="icon-heart2"></i>200</li>
-									<li><i class="icon-eye2"></i>248</li>
-									<li><i class="icon-download3"></i>240</li>
-								</ul>
-							</div> 
-						</a>
-					</div>
+				  
 				</div>
-				<div class="col-md-4">
-					<div class="fh5co-portfolio animate-box">
-						<a href="#">
-							<div class="portfolio-entry" style="background-image: url(images/portfolio-3.jpg);"></div>
-							<div class="portfolio-text">
-								<h3>Photoshoot On The Street</h3>
-								<ul class="stuff">
-									<li><i class="icon-heart2"></i>200</li>
-									<li><i class="icon-eye2"></i>248</li>
-									<li><i class="icon-download3"></i>240</li>
-								</ul>
-							</div> 
-						</a>
-					</div>
+				<div>
+					<p><br>
+						Development from scratch of the entire product and its different life cycles. Creation of strategy and roadmap of the minimum viable product and the following phases of growth. Transition of the business model to incorporate large brands in B2B such as ESCADA and TOUS.</p>
+					<p><a href="portfolio_pislow.html" Target="_blank" style="text-decoration: none;" >Learn More <i class="icon-arrow-right22"></i></a></p>
 				</div>
-				<div class="col-md-4">
-					<div class="fh5co-portfolio animate-box">
-						<a href="#">
-							<div class="portfolio-entry" style="background-image: url(images/portfolio-5.jpg);"></div>
-							<div class="portfolio-text">
-								<h3>Photoshoot On The Street</h3>
-								<ul class="stuff">
-									<li><i class="icon-heart2"></i>200</li>
-									<li><i class="icon-eye2"></i>248</li>
-									<li><i class="icon-download3"></i>240</li>
-								</ul>
-							</div> 
-						</a>
+
+				 <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+					<div class="carousel-inner">
+					  <div class="carousel-item active">
+						<img src="images/micolet/1.png" class="d-block w-100" alt="...">
+					  </div>
+					  <div class="carousel-item">
+						<img src="images/micolet/2.png"class="d-block w-100" alt="...">
+					  </div>
+					  <div class="carousel-item">
+						<img src="images/micolet/3.png"class="d-block w-100" alt="...">
+					  </div>
 					</div>
+					<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+					  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+					  <span class="visually-hidden">Previous</span>
+					</button>
+					<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+					  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+					  <span class="visually-hidden">Next</span>
+					</button>
+				  </div>
+				<div>
+					<p><br>
+						Leading the product and technology as CPO/CTO. Participating in all the stages of the product map and be responsible of all the strategy to achieve 2M of users in the last year.</p>
+					<p><a href="portfolio_pislow.html" Target="_blank" style="text-decoration: none;" >Learn More <i class="icon-arrow-right22"></i></a></p>
 				</div>
-				<div class="col-md-4">
-					<div class="fh5co-portfolio animate-box">
-						<a href="#">
-							<div class="portfolio-entry" style="background-image: url(images/portfolio-4.jpg);"></div>
-							<div class="portfolio-text">
-								<h3>Photoshoot On The Street</h3>
-								<ul class="stuff">
-									<li><i class="icon-heart2"></i>200</li>
-									<li><i class="icon-eye2"></i>248</li>
-									<li><i class="icon-download3"></i>240</li>
-								</ul>
-							</div> 
-						</a>
-					</div>
+
+				<div class="embed-responsive embed-responsive-16by9">
+					<iframe class="embed-responsive-item" src="https://www.youtube.com/watch?v=EcVdUZ9IHow" allowfullscreen></iframe>
+				  </div>
+				<div>
+					<p><br>
+						
+					Collaborating in the new version of the whole platform without be updated in 8 years. Defining and developing the new improved UI/UX and the related features.</p>
+					<p><a href="portfolio_pislow.html" Target="_blank" style="text-decoration: none;" >Learn More <i class="icon-arrow-right22"></i></a></p>
 				</div>
-				<div class="col-md-4">
-					<div class="fh5co-portfolio animate-box">
-						<a href="#">
-							<div class="portfolio-entry" style="background-image: url(images/portfolio-6.jpg);"></div>
-							<div class="portfolio-text">
-								<h3>Photoshoot On The Street</h3>
-								<ul class="stuff">
-									<li><i class="icon-heart2"></i>200</li>
-									<li><i class="icon-eye2"></i>248</li>
-									<li><i class="icon-download3"></i>240</li>
-								</ul>
-							</div> 
-						</a>
-					</div>
-				</div>
+			</div>
 			</div>
 		</div>
 	</div>
-	
+
 	<div id="fh5co-started">
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row animate-box">
-				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
+				<div class=" col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2 text-center fh5co-heading">
 					<h2>Hire Us!</h2>
 					<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta adipisci architecto culpa amet.</p>
 					<p><a href="#" class="btn btn-default btn-lg">Contact Us</a></p>
@@ -247,7 +228,9 @@
 	<script src="js/jquery.flexslider-min.js"></script>
 	<!-- Main -->
 	<script src="js/main.js"></script>
-
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 	</body>
 </html>
+
+
 
