--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<!-- Flexslider  -->
 	<link rel="stylesheet" href="css/flexslider.css">
-
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 	<!-- Theme style  -->
 	<link rel="stylesheet" href="css/style.css">
 
@@ -51,7 +51,7 @@
 	<nav class="fh5co-nav" role="navigation">
 		<div class="top-menu">
 			<div class="container">
-				<div class="row">
+				<div class="">
 					<div class="col-xs-2">
 						<div id="fh5co-logo"><a href="index.html">MJG<span>.</span></a></div>
 					</div>
@@ -81,12 +81,12 @@
 	<div id="fh5co-about" class="no-padding-top">
 		<div class="container">
 			<div class="row animate-box">
-				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading" style="margin-bottom: 0;">
+				<div class=" col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2 col-sm-8 col-sm-offset-2 text-center fh5co-heading" style="margin-bottom: 0;">
 					<h2>About Me</h2>
 					<p>"Opportunities don't happen, you create them."</p>
-					<img style="width: 40%; height: 40%; border-radius: 50%;" alt="avatar1" src="images/perfil_linkedin.jpg" />
+					<img class="img-fluid rounded-circle" alt="avatar1" src="images/perfil_linkedin.jpg" />
 				</div>
-				<div class="col-md-6 col-md-offset-3 text-center" style="padding-top: 2rem">
+				<div class="col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3 text-center" style="padding-top: 2rem">
 					<p>After 10 years as Project/Product Manager in IT I have strong skills analysing and designing the best solutions for business processes and product development. I also combine all my corporate experience with 8 years in the startup sector, developing innovative products and using avant -garde technologies both in the development of the product and team management.
 						I love innovation and technological trends. I am a productive and creative person with an excellent technical-functional / logical-creative profile which allows me to create and develop successful tech platforms.</p>
 				</div>
@@ -177,7 +177,7 @@
 	<div id="fh5co-content-section">
 		<div class="container">
 			<div class="row row-bottom-padded-md">
-				<div class="col-md-8 col-md-offset-2 text-center heading-section animate-box fadeInUp animated-fast">
+				<div class=" col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2 text-center heading-section animate-box fadeInUp animated-fast">
 					<h3>Noteworthy Skills</h3>
 					<p style="font-size: initial;">I bring a unique blend of skills to the table. I have a deep understanding of the complete product lifecycle, from customer interviews and journey maps to hypothesis validation and data analysis. <br>I am also well-versed in digital marketing, design, and UX principles, which allows me to create products that not only meet the needs of users but also exceed their expectations.<br>
 						Throughout my career, I have worked with a variety of tools and technologies, including <strong>Monday, Microsoft Visio, Ignition, Flowchart, SalesForce, Figma, Google Analytics</strong>, and more. I am skilled in using data to gain insights into user behavior and make informed decisions that drive growth.<br>
@@ -191,10 +191,10 @@
 	<div>
 		<div class="container">
 			<div class="row row-bottom-padded-md">
-				<div class="col-md-8 col-md-offset-2 text-center heading-section animate-box fadeInUp animated-fast">
+				<div class=" col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2 text-center heading-section animate-box fadeInUp animated-fast">
 					<h3>My Resume</h3>
 					<p>Do you want to know more about my professional career?</p>
-					<p><a href="/images/MJG_CV_EN.docx" class="btn btn-primary btn-lg btn-demo" download>
+					<p><a href="images/MJG_CV_EN.docx" class="btn btn-primary btn-lg btn-demo" download>
 						Download CV
 					  </a>
 				</div>
@@ -241,7 +241,7 @@
 	<script src="js/jquery.flexslider-min.js"></script>
 	<!-- Main -->
 	<script src="js/main.js"></script>
-
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 	</body>
 </html>
 
