--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
 	<link rel="stylesheet" href="css/flexslider.css">
 	<!-- Theme style  -->
 	<link rel="stylesheet" href="css/style.css">
-
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 	<!-- Modernizr JS -->
 	<script src="js/modernizr-2.6.2.min.js"></script>
 	<!-- FOR IE9 below -->
@@ -50,7 +50,7 @@
 	<nav class="fh5co-nav" role="navigation">
 		<div class="top-menu">
 			<div class="container">
-				<div class="row">
+				<div class="">
 					<div class="col-xs-2">
 						<div id="fh5co-logo"><a href="index.html">Air<span>.</span></a></div>
 					</div>
@@ -80,7 +80,7 @@
 	<div id="fh5co-contact">
 		<div class="container">
 			<div class="row animate-box">
-				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
+				<div class=" col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2 text-center fh5co-heading">
 					<h2>Contact us</h2>
 					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia.</p>
 				</div>
@@ -129,7 +129,7 @@
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row animate-box">
-				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
+				<div class=" col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2 text-center fh5co-heading">
 					<h2>Hire Us!</h2>
 					<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta adipisci architecto culpa amet.</p>
 					<p><a href="#" class="btn btn-default btn-lg">Contact Us</a></p>
@@ -178,7 +178,7 @@
 	<script src="js/magnific-popup-options.js"></script>
 	<!-- Main -->
 	<script src="js/main.js"></script>
-
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 	</body>
 </html>
 
