--- a/about.html
+++ b/about.html
@@ -86,9 +86,16 @@
 					<p>"Opportunities don't happen, you create them."</p>
 					<img class="img-fluid rounded-circle" alt="avatar1" src="images/perfil_linkedin.jpg" />
 				</div>
-				<div class="col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3 text-center" style="padding-top: 2rem">
-					<p>After 10 years as Project/Product Manager in IT I have strong skills analysing and designing the best solutions for business processes and product development. I also combine all my corporate experience with 8 years in the startup sector, developing innovative products and using avant -garde technologies both in the development of the product and team management.
+				<div class="col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2 text-center" style="padding-top: 2rem">
+					<p>I am a mathematician with 15 years of experience between IT consulting and in digital platforms. Leading, designing and developing disruptive technological successful solutions. After 10 years as Project/Product Manager in IT
+						I have deep skills leading projects in large international companies with a presence in more than 15 countries and managing different stakeholders in all the areas/departments to translate and unite the requirements into successful
+						 technological solutions. I also combine all my corporate experience with 8 years in the startup sector, developing innovative products and using avant -garde technologies both in the development of the product and team management.
 						I love innovation and technological trends. I am a productive and creative person with an excellent technical-functional / logical-creative profile which allows me to create and develop successful tech platforms.</p>
+
+				     <h4>CURIOSITIES</h4>
+					 <p><div>Proud in collaborate as a woman in open source solutions like <a href="https://github.com/boomerdigital/solidus_marketplace">solidus marketplace</a></div>
+						<div>I participate actively in the entrepreneurial and innovation ecosystem  <a href="https://masalladelainnovacion.com/w-startup-community-lanzamiento-capitulo-cataluna/">Woman startup</a></div>
+					 </p>
 				</div>
 			</div>
 
@@ -177,7 +184,7 @@
 	<div id="fh5co-content-section">
 		<div class="container">
 			<div class="row row-bottom-padded-md">
-				<div class=" col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2 text-center heading-section animate-box fadeInUp animated-fast">
+				<div class="col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2 text-center heading-section animate-box fadeInUp animated-fast">
 					<h3>Noteworthy Skills</h3>
 					<p style="font-size: initial;">I bring a unique blend of skills to the table. I have a deep understanding of the complete product lifecycle, from customer interviews and journey maps to hypothesis validation and data analysis. <br>I am also well-versed in digital marketing, design, and UX principles, which allows me to create products that not only meet the needs of users but also exceed their expectations.<br>
 						Throughout my career, I have worked with a variety of tools and technologies, including <strong>Monday, Microsoft Visio, Ignition, Flowchart, SalesForce, Figma, Google Analytics</strong>, and more. I am skilled in using data to gain insights into user behavior and make informed decisions that drive growth.<br>
