--- a/portfolio.html
+++ b/portfolio.html
@@ -83,7 +83,7 @@
 			<div class="row animate-box">
 				<div class=" col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2 col-sm-8 col-sm-offset-2 text-center fh5co-heading">
 					<h2>My Work</h2>
-					<p>"Building a great product is a creative, chaotic process which you won’t get right every time, so you have to also be learning from success and failure."	</p>
+					<p>“If you don't invest in the future and don't plant for the future, there won't be one”</p>
 				</div>
 			</div>
 			<div class="row">
@@ -133,8 +133,8 @@
 				</div>
 				<div>
 					<p><br>
-						Development from scratch of the entire product and its different life cycles. Creation of strategy and roadmap of the minimum viable product and the following phases of growth. Transition of the business model to incorporate large brands in B2B such as ESCADA and TOUS.</p>
-					<p><a href="portfolio_pislow.html" Target="_blank" style="text-decoration: none;" >Learn More <i class="icon-arrow-right22"></i></a></p>
+						Leading as CEO/CPO the whole product from scratch during its different stages and life circle. Creation of strategy and roadmap of the minimum viable product and the following phases of growth. Transition of the business model to incorporate large important fashion brands in B2B model such as ESCADA and TOUS.</p>
+					<p><a href="https://www.harpersbazaar.com/es/moda/noticias-moda/a36589952/escada-alquiler-ropa-plataforma-pislow-moda/" Target="_blank" style="text-decoration: none;" >Learn More <i class="icon-arrow-right22"></i></a></p>
 				</div>
 
 				 <div id="carouselmicolet" class="carousel slide" data-bs-ride="carousel">
@@ -161,17 +161,25 @@
 				<div>
 					<p><br>
 						Leading the product and technology as CPO/CTO. Participating in all the stages of the product map and be responsible of all the strategy to achieve 2M of users in the last year.</p>
-					<p><a href="portfolio_pislow.html" Target="_blank" style="text-decoration: none;" >Learn More <i class="icon-arrow-right22"></i></a></p>
+					<p><a href="https://www.micolet.com" Target="_blank" style="text-decoration: none;" >Learn More <i class="icon-arrow-right22"></i></a></p>
 				</div>
 
 				<div class="embed-responsive embed-responsive-16by9">
 					<iframe class="embed-responsive-item" src="https://youtu.be/EcVdUZ9IHow" allowfullscreen></iframe>
 				  </div>
 				<div>
-				<p><br>
+					<p><br>
 						
-				Collaborating in the new version of the whole platform without be updated in 8 years. Defining and developing the new improved UI/UX and the related features.</p>
-				<p><a href="portfolio_pislow.html" Target="_blank" style="text-decoration: none;" >Learn More <i class="icon-arrow-right22"></i></a></p>
+					Collaborating in the new version of the whole platform without be updated in 8 years. Defining and developing the new improved UI/UX and the related features.</p>
+					<p><a href="https://www.teambookapp.com" Target="_blank" style="text-decoration: none;" >Learn More <i class="icon-arrow-right22"></i></a></p>
+				</div>
+				<div>
+					<img class="img-fluid" src="images/IT Job Presentation.png">
+				</div>
+				<div>
+					<p><br>
+						
+					 The first ten years of my career was spent in consulting. Especially in the area of ​​human resources, but also in finance, controlling or sales. Analyzing, designing and developing the implementation of my clients business processes in the ERP 'SAP'. Leading the planification, project roadmap and development team in the different stages of the process..</p>
 				</div>
 			</div>
 			</div>
@@ -184,8 +192,8 @@
 			<div class="row animate-box">
 				<div class=" col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2 text-center fh5co-heading">
 					<h2>Hire Us!</h2>
-					<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta adipisci architecto culpa amet.</p>
-					<p><a href="#" class="btn btn-default btn-lg">Contact Us</a></p>
+					<p>Let me help you to scale up your business and create the best product for your clients.</p>
+					<p><a href="mailto:sechix@gmail.com" class="btn btn-default btn-lg">Contact Me</a></p>
 				</div>
 			</div>
 		</div>
